--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ header h1 {
 header div:last-child {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 /*********************************
